--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 header{
   border-bottom: solid 2px rgb(42, 122, 228);
   padding: 20px;
-  font-size: 32px
+  font-size: 32px;
   color: rgb(42, 122, 228);
 }
 .chamada {
@@ -28,6 +28,7 @@ h1 {
 
 p {
   font-size: 20px;
+  
 .categoria-videos {
   display: flex;
   overflow-x: auto;
